post messages fix

--- a/slider.html
+++ b/slider.html
@@ -27,7 +27,9 @@
 			<div class="ls-l post" alt="" style="top:50%; left:20%;width:1100px;height:733px;filter:grayscale(100%) sepia(30%);" data-ls="showinfo:1; offsetxin:left;                       durationin:5500; delayin:6100;      easingin:easeOutQuad; fadein:false; rotatein:30; scalexin:.5; scaleyin:.5; durationout:4000; startatout:allinandloopend + 0; easingout:easeInQuint; loop:true; loopoffsetx:600;                         loopduration:4000;      loopstartat:transitioninstart + 9000;  loopeasing:easeInOutQuart; looprotate:-7;              loopscalex:1.7; loopscaley:1.7; loopcount:1; loopfilter:grayscale(0%) sepia(0%) contrast(150%); rotation:7; scaleX:.5; scaleY:.5;">
 				<div class="content">
 					<div class="message">
-						Lorem ipsum dolor sit amet
+						<div class="wrapper">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ipsa amet quod! Excepturi sed consequatur, quidem minima mollitia earum ducimus illum labore quam perspiciatis iure qui fuga laboriosam voluptates praesentium.
+						</div>
 					</div>
 					<div class="by">
 						Stefan Luy
@@ -38,7 +40,9 @@
 				<div class="content">
 					<div class="picture" style="background-image: url('public/assets/images/5.jpg');"></div>
 					<div class="message">
-						Lorem ipsum dolor sit amet
+						<div class="wrapper">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae a dolores sapiente unde quia voluptas officia voluptatibus, tenetur, ipsa qui accusantium veritatis in, suscipit quidem eos velit perferendis ea. Exercitationem?
+						</div>
 					</div>
 					<div class="by">
 						Stefan Luy
